--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f69090">  <td>21/05/17 01:41:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ApiUnitTesting.testingpost()[pri:0, instance:ApiUnitTesting@20d28811]">testingpost</td> 
-  <td>main@692331943</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>21/05/17 01:51:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ApiUnitTesting.testing1post()[pri:0, instance:ApiUnitTesting@48aaecc3]">testing1post</td> 
+  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>21/05/17 01:51:07</td>   <td>3228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ApiUnitTesting.testing2patch()[pri:0, instance:ApiUnitTesting@48aaecc3]">testing2patch</td> 
+  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>21/05/17 01:51:08</td>   <td>4662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ApiUnitTesting.testing3get()[pri:0, instance:ApiUnitTesting@48aaecc3]">testing3get</td> 
+  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>21/05/17 01:51:09</td>   <td>5316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ApiUnitTesting.testing4delete()[pri:0, instance:ApiUnitTesting@48aaecc3]">testing4delete</td> 
+  <td>main@2127036371</td>   <td></td> </tr>
 </table>
